# animeippo-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  docker-entrypoint.sh  pyproject.toml
.claude/skills/verify/: SKILL.md
.claude/todos/: collaborative-recommendation-score.md  index.md  lane_bending_architecture.md  mood_intensity_funnel.md  rate-limiting-queue.md  scoring-improvements.md  sparse-data-requirements.md
.devcontainer/: devcontainer.json
.github/: cd_workflow.yml
.github/workflows/: cd_workflow.yml
animeippo/: __main__.py  analysis.py  get_mal_token.py  main.py  myanimelist.py  recommendation.py  user_anime_list.py
animeippo/analysis/: analysis.py  encoding.py  similarity.py  statistics.py
animeippo/cache/: __init__.py  decorator.py  redis_cache.py
animeippo/clustering/: metrics.py  model.py
animeippo/profiling/: analyser.py  characteristics.py  model.py
animeippo/providers/: __init__.py  anilist.py  anilist_data.py  animeofflinedb.py  caching.py  columns.py  filters.py  mappers.py  mixed_provider.py  myanimelist.py  provider.py  provider_builder.py  schema.py  util.py
animeippo/providers/anilist/: connection.py  formatter.py  provider.py  schema.py
animeippo/providers/formatters/: ani_formatter.py  mal_formatter.py  mixed_formatter.py  schema.py  util.py
animeippo/providers/mixed/: formatter.py  provider.py  schema.py
animeippo/providers/myanimelist/: connection.py  formatter.py  provider.py  schema.py
animeippo/recommendation/: analysis.py  builder.py  categories.py  clustering.py  dataset.py  discourager.py  encoding.py  engine.py  filters.py  model.py  profile.py  recommender.py  recommender_builder.py  scoring.py  util.py
animeippo/util/: jupyter.py
animeippo/view/: views.py
conf/: conf_template.env
doc/: architecture_overhaul.md  architecture_target_state.md
scripts/: preload_cache.py
src/animeippo/: __main__.py  logging.py
src/animeippo/analysis/: encoding.py  similarity.py  statistics.py
src/animeippo/cache/: __init__.py  redis_cache.py
src/animeippo/clustering/: model.py
src/animeippo/meta/: meta.py
src/animeippo/profiling/: analyser.py  characteristics.py  cluster_namer.py  model.py
src/animeippo/providers/: __init__.py  abstract_provider.py  caching.py  columns.py  mappers.py  util.py
src/animeippo/providers/anilist/: __init__.py  connection.py  data.py  formatter.py  provider.py  schema.py
src/animeippo/providers/mixed/: formatter.py  provider.py  schema.py
src/animeippo/providers/myanimelist/: connection.py  formatter.py  provider.py  schema.py
src/animeippo/recommendation/: categories.py  cluster_naming.py  engine.py  funnel.py  model.py  ranking.py  recommender.py  recommender_builder.py  scoring.py
src/animeippo/scripts/: clear_cache.py  get_mal_token.py  preload_cache.py
src/animeippo/util/: get_mal_token.py
src/animeippo/view/: views.py
tests/: conftest.py  test_analysis.py  test_app.py  test_data.py  test_logging.py  test_main.py  test_mal.py  test_myanimelist.py  test_provider.py  test_recommendation.py
tests/analysis/: test_analysis.py
tests/cache/: test_cache.py
tests/clustering/: test_metrics.py  test_model.py
tests/meta/: test_meta.py
tests/performance/: test_json_normalize.py
tests/profiling/: test_cluster_namer.py  test_profile.py  test_user_profile.py
tests/providers/: test_anilist.py  test_animeofflinedb.py  test_filters.py  test_mappers.py  test_mixed_provider.py  test_myanimelist.py  test_provider.py  test_schema.py  test_util.py
tests/providers/anilist/: test_ani_formatter.py  test_anilist.py  test_anilist_data.py
tests/providers/formatters/: test_ani_formatter.py  test_anilist_data.py  test_mal_formatter.py  test_mixed_formatter.py  test_schema.py
tests/providers/mixed/: test_mixed_formatter.py  test_mixed_provider.py
tests/providers/myanimelist/: stubs.py  test_connection.py  test_formatter.py  test_mal_formatter.py  test_myanimelist.py  test_provider.py
tests/recommendation/: test_analysis.py  test_builder.py  test_categories.py  test_cluster_naming.py  test_clustering.py  test_dataset.py  test_encoding.py  test_engine.py  test_filters.py  test_funnel.py  test_model.py  test_profile.py  test_recommendation.py  test_recommender.py  test_recommender_builder.py  test_scoring.py
tests/util/: test_feature_extraction.py  test_pandas.py
tests/view/: test_views.py
